k8s-jenkinswith-pv/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:  
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: jenkins-deployement
            port:
              number: 8080
